--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -10,24 +10,36 @@
 {% block content %}
 <div class="content-wrapper row">
     <section class="main-content col-md-9 col-lg-9">
-        <section class="about-summary py-md-4 py-4" id="about-summary">
-            <div class="container py-md-4 py-4">
-                <div class="divider-shape"></div>
+        <section class="about-summary py-md-2 py-4" id="about-summary">
+            <div class="container py-md-2 py-4">
                 <h2>SUMMARY</h2>
+                <div class="divider-shape"></div>
+                <p>Communication skills: I have confident verbal communication skills as demonstrated by delivering presentations in front of a large group, feeding back proposals to senior management and negotiating improvements to business processes across different departments.</p>
             </div>
         </section>
 
-        <section class="about-skills py-md-4 py-4" id="about-skills">
-            <div class="container py-md-4 py-4">
-                <div class="divider-shape"></div>
+        <section class="about-skills py-md-2 py-4" id="about-skills">
+            <div class="container py-md-2 py-4">
                 <h2>SKILLS</h2>
+                <div class="divider-shape"></div>
+                <ul class="skills-list">
+                    <li>
+                        Communication skills: I have confident verbal communication skills as demonstrated by delivering presentations in front of a large group, feeding back proposals to senior management and negotiating improvements to business processes across different departments.
+                    </li>
+                    <li>
+                        Leadership skills: I have had experience leading people as I was Team Leader on a number of projects, both during my University studies and as part of my job at Business Change.
+                    </li>
+                    <li>
+                        Researching skills: I have experience of and talent for investigating, analysing and researching a variety of different processes and offering practical improvements and solutions for the benefit of the organisation.
+                    </li>
+                </ul>
             </div>
         </section>
 
-        <section class="about-work-experience py-md-4 py-4" id="about-work-experience">
-            <div class="container py-md-4 py-4">
-                <div class="divider-shape"></div>
+        <section class="about-work-experience py-md-2 py-4" id="about-work-experience">
+            <div class="container py-md-2 py-4">
                 <h2>WORK EXPERIENCE</h2>
+                <div class="divider-shape"></div>
                 <div class="work-experience-block">
                     <span class="work-experience-date">2012-2014</span>
                     <div class="work-experience-details">
@@ -52,17 +64,39 @@
             </div>
         </section>
 
-        <section class="about-personal-project py-md-4 py-4" id="about-personal-project">
-            <div class="container py-md-4 py-4">
-                <div class="divider-shape"></div>
+        <section class="about-personal-project py-md-2 py-4" id="about-personal-project">
+            <div class="container py-md-2 py-4">
                 <h2>PERSONAL PROJECT</h2>
+                <div class="divider-shape"></div>
+                <div class="personal-project-block">
+                    <h3 class="personal-project-title">PROJECT NAME</h3>
+                    <p class="personal-project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                    <span class="skills-list">
+                        <span class="skill-tag">Angular</span>
+                        <span class="skill-tag">React</span>
+                        <span class="skill-tag">Express</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">C++</span>
+                        <span class="skill-tag">Devops</span>
+                        <span class="skill-tag">OOP</span>
+                        <span class="skill-tag">Git</span>
+                        <span class="skill-tag">Linux</span>
+                        <span class="skill-tag">JS</span>
+                    </span>
+                    <div class="personal-project-checkout">
+                        <span>Check it out</span>
+                        <i class="ri-arrow-right-circle-line"></i>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="about-education py-md-4 py-4" id="about-education">
-            <div class="container py-md-4 py-4">
-                <div class="divider-shape"></div>
+        <section class="about-education py-md-2 py-4" id="about-education">
+            <div class="container py-md-2 py-4">
                 <h2>EDUCATION</h2>
+                <div class="divider-shape"></div>
+                <h3>London Business School</h3>
+                <p>Master Degree</p>
             </div>
         </section>
     </section>
